# HTTP-server

./: CMakeLists.txt  configuration.xml  server.cpp
config/: config.h
src_http_server/: http_server.cpp  http_server.h
src_parse_xml/: parse_xml.cpp  parse_xml.h
webroot/: 400.html  403.html  404.html  405.html  500.html  505.html
